fix: normalize dark mode in docs

--- a/examples/with-normalize/style.scss
+++ b/examples/with-normalize/style.scss
@@ -1,10 +1,132 @@
 @use '../../packages/bridgecss/bridge.scss' as *;
 @use '../../packages/bridgecss/normalize.scss' as *;
 
-#app {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-align: center;
-  color: $gray-500;
-  margin-top: 60px;
+
+body {
+  display: grid;
+  place-content: center;
+  padding: spacing(7);
+  gap: spacing(7);
+}
+
+article, section, form, fieldset, header, .page, .spaced, #text__lists > div, #text__code > div, #text__inline > div {
+  display: grid;
+  gap: spacing(4);
+}
+
+nav > ul {
+  display: flex;
+  list-style-type: none;
+  padding-inline-start: 0;
+  gap: spacing(5);
+}
+
+.open-props {
+  display: flex;
+  align-items: center;
+  gap: spacing(3);
+}
+
+.surface-samples {
+  display: grid;
+  grid-template-columns: spacing(70) spacing(70);
+  grid-auto-rows: spacing(70);
+  gap: spacing(5);
+  margin-block-start: spacing(6);
+}
+
+@media (width <= 480px) {
+  .surface-samples {
+    --size: 40vw;
+  }
+}
+
+.surface-samples > * {
+  border-radius: spacing(3);
+  display: grid;
+  place-content: center;
+  @include text-lg;
+  font-weight: 600;
+  box-shadow: shadow(6);
+}
+
+.surface1 {
+  background-color: var(--surface-1);
+  color: var(--text-2);
+}
+
+.surface2 {
+  background-color: var(--surface-2);
+  color: var(--text-2);
+}
+
+.surface3 {
+  background-color: var(--surface-3);
+  color: var(--text-1);
+}
+
+.surface4 {
+  background-color: var(--surface-4);
+  color: var(--text-1);
+}
+
+.text-samples {
+  display: grid;
+  gap: spacing(3);
+}
+
+.text-samples > h5 {
+  display: inline-flex;
+  align-items: center;
+  gap: spacing(3);
+}
+
+.text1 {
+  color: var(--text-1);
+}
+p.text1 {
+  font-weight: var(--font-weight-2);
+}
+
+.text2 {
+  color: var(--text-2);
+}
+
+.brand {
+  color: var(--brand);
+  background-color: var(--brand);
+}
+
+.link {
+  color: var(--link);
+  background-color: var(--link);
+}
+
+.link-visited {
+  color: var(--link-visited);
+  background-color: var(--link-visited);
+}
+
+.swatch {
+  display: inline-block;
+  flex-shrink: 0;
+  inline-size: spacing(8);
+  block-size: spacing(8);
+  border-radius: var(--radius-round);
+  box-shadow: var(--shadow-4);
+}
+.swatch.text1 { background-color: var(--text-1); }
+.swatch.text2 { background-color: var(--text-2); }
+
+.buttons-list {
+  display: flex;
+  align-items: flex-start;
+  gap: spacing(3);
+  flex-wrap: wrap;
+}
+
+#forms__html5 > p {
+  display: flex;
+  align-items: center;
+  gap: spacing(3);
 }
