--- a/packages/bridgecss/normalize.scss
+++ b/packages/bridgecss/normalize.scss
@@ -1,5 +1,39 @@
 @use "./bridge.scss" as *;
 
+:root[data-theme=dark] {
+    color-scheme: dark;
+
+    --surface-1: #{$gray-900};
+    --surface-2: #{$gray-800};
+    --surface-3: #{$gray-700};
+    --surface-4: #{$gray-600};
+
+    --text-1: #{$gray-100};
+    --text-2: #{$gray-300};
+}
+
+:root[data-theme=light] {
+   color-scheme: light;
+    
+    --surface-1: #{$gray-200};
+    --surface-2: #{$gray-100};
+    --surface-3: #{$gray-200};
+    --surface-4: #{$gray-400};
+
+    --text-1: #{$gray-800};
+    --text-2: #{$gray-700};
+}
+
+
+:where(html) {
+  background-color: var(--surface-1);
+  color: var(--text-2);
+}
+
+:where(h1, h2, h3, h4, h5, h6, dt) { 
+  color: var(--text-1);
+}
+
 *, ::before, ::after { box-sizing: border-box; }
 
 :where(:not(dialog)) {
